--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - lib/assets/RiverSong.jpg
     - lib/assets/background.jpg
     - lib/assets/background_questions.jpg
+    - lib/assets/tardis_icon.png
     
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
